<resources>
    <string name="app_name">UseMoney</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_history">История</string>
    <string name="title_change">Диаграмма</string>
    <string name="title_card">Счета</string>
    <string name="title_plan">План</string>
    <string name="order_confirmation">Привет</string>
    <string name="ok">OK</string>
    <string name="account">СЧЕТА</string>
    <string name="add">Добавить…</string>
    <string name="add_name_category">Введите название новой категории</string>
    <string name="cancel">Отмена</string>
    <string name="add_value_change">Выберите категорию</string>
    <string name="input_change">Введите значение</string>
    <string name="pick_date">Выберите дату</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="income">Доходы</string>
    <string name="cost">Расходы</string>
    <string name="budget">Бюджет</string>
    <string name="accounts">Счета</string>
    <string name="title_activity_add_bill">AddBillActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ip"><u>https://2ip.ua/ru/</u></string>
    <string name="decription">Описание</string>
    <string name="in">В</string>

    <array name="currency">
        <item>Доллар($)</item>
        <item>Гривна(₴)</item>
        <item>Евро(€)</item>
        <item>Фунт(£)</item>
    </array>
</resources>