<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/AddValueFragment"
    tools:context=".ui.add.change.AddChangeFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="265dp"
        android:text="@string/add_value_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inputCategoryRecyclerView"
        android:layout_width="408dp"
        android:layout_height="186dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputValueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_change"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCategoryRecyclerView" />

    <Button
        android:id="@+id/okeyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="50dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputDateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/pick_date"
        android:inputType="date"
        android:longClickable="false"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputValueEditText" />

    <EditText
        android:id="@+id/decriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/decription"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDateEditText" />

    <TextView
        android:id="@+id/in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/in"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/inputValueEditText"
        app:layout_constraintTop_toBottomOf="@+id/inputCategoryRecyclerView" />

    <TextView
        android:id="@+id/currencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="44dp"
        android:text="$"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/in"
        app:layout_constraintTop_toBottomOf="@+id/inputCategoryRecyclerView" />

    <Spinner
        android:id="@+id/addChangeSpinner"
        android:layout_width="50dp"
        android:layout_height="26dp"
        android:layout_marginTop="45dp"
        android:entries="@array/currency"
        app:layout_constraintStart_toEndOf="@+id/currencyTextView"
        app:layout_constraintTop_toBottomOf="@+id/inputCategoryRecyclerView" />
</androidx.constraintlayout.widget.ConstraintLayout>