<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id ="@+id/AddPlanFragment"
    tools:context=".add_data.AddPlanFragment">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="1dp"
        android:text="@string/add_value_change"
        app:layout_constraintBottom_toTopOf="@+id/categoryRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="404dp"
        android:layout_height="259dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="57dp"
        app:layout_constraintBottom_toTopOf="@+id/firstDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/firstDate"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="65dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/from"
        android:inputType="date"
        android:longClickable="false"
        app:layout_constraintBottom_toTopOf="@+id/budgetEditText"
        app:layout_constraintEnd_toStartOf="@+id/secondDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/secondDate"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/to"
        android:inputType="date"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstDate"
        app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerView" />

    <EditText
        android:id="@+id/budgetEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="184dp"
        android:ems="10"

        android:hint="@string/budget"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstDate" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="25dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondDate" />
</androidx.constraintlayout.widget.ConstraintLayout>